sn*s parsers updated 403 bug fixed

--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-This file was created by IntelliJ IDEA 12.0.1 for binding GitHub repository
+Contests parser, enjoy!
 
-jar build - https://yadi.sk/d/2BhouP3pU2Lt4
+jar build (1.8) - https://yadi.sk/d/2BhouP3pU2Lt4
